{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 159,
  "lineage": "b4371e40-7fd6-0b71-133e-2dc1bdb28b34",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend-healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-14T09:06:20.733-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/josh-test-327416/global/firewalls/lb-backend-health-check",
            "name": "lb-backend-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "priority": 1000,
            "project": "josh-test-327416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/firewalls/lb-backend-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-14T09:15:20.797-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/josh-test-327416/global/firewalls/iap-fw-rule",
            "name": "iap-fw-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "priority": 1000,
            "project": "josh-test-327416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/firewalls/iap-fw-rule",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "name": "coalfire-demo-vpc",
            "project": "josh-test-327416",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-02-14T09:06:20.910-08:00",
            "id": "projects/josh-test-327416/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "project": "josh-test-327416",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/routers/router"
          },
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "josh-test-327416/us-central1/router/private-subnets-nat",
            "min_ports_per_vm": 0,
            "name": "private-subnets-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "josh-test-327416",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet1",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet2",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.demo-vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.private1",
            "google_compute_subnetwork.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-14T09:06:21.346-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet1",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "coalfire-private-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "private_ip_google_access": true,
            "project": "josh-test-327416",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet1"
          },
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-14T09:06:21.420-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet2",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "coalfire-private-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "private_ip_google_access": true,
            "project": "josh-test-327416",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-private-subnet2"
          },
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-14T09:06:21.539-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-public-subnet1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "coalfire-public-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "private_ip_google_access": false,
            "project": "josh-test-327416",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-public-subnet1"
          },
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-14T09:06:21.081-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-public-subnet2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "coalfire-public-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/global/networks/coalfire-demo-vpc",
            "private_ip_google_access": false,
            "project": "josh-test-327416",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/josh-test-327416/regions/us-central1/subnetworks/coalfire-public-subnet2"
          },
          "dependencies": [
            "google_compute_network.demo-vpc"
          ]
        }
      ]
    }
  ]
}